...
            android:hint="Email"
            android:layout_marginStart="12sp"
            android:layout_marginTop="12sp"
            android:textColor="#8A8585"
            android:textColorHint="#8A8585"
            android:inputType="textEmailAddress"
            android:id="@+id/loginEmail"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Password"
            android:layout_marginStart="12sp"
            android:layout_marginTop="12sp"
            android:id="@+id/loginPassword"
            android:textColor="#8A8585"
            android:textColorHint="#8A8585"
            android:layout_marginBottom="15sp"
            android:inputType="textPassword"/>

        <TextView
...
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <ImageButton
                android:id="@+id/loginButton"
                android:layout_width="250dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:background="@drawable/ic_baseline_theaters_24"
                android:scaleType="centerCrop"/>

...
